--- a/project.css
+++ b/project.css
@@ -14,7 +14,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
  
-
+.img1{
+    width: 500px;
+    height: 300px;
+}
 #name{
     width:80%;
 }
@@ -29,9 +32,9 @@
     margin-top: 3%;
 }
 .footer{
-    margin-top: 10px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-top: 2%;
+    margin-left: 4%;
+    margin-right: 4%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 20px;
@@ -44,9 +47,9 @@
     font-weight: 1rem;
 }
 hr{
-    margin-top: 100px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-top: 15%;
+    margin-left: 4%;
+    margin-right: 4%;
 }
 
 .pointer{
@@ -62,4 +65,46 @@ hr{
     grid-template-columns: 1fr 1fr;
     font-family: Arial, Helvetica, sans-serif;
     column-gap: 27.59%;
+}
+
+@media all and (max-width:550px){
+    .myName{
+        font-family: 'Kaushan Script', cursive;
+        font-size: 1.3rem;
+    }
+    #name{
+        width:65%;
+    }
+    .navLinks{
+        text-decoration: none;
+        font-size: 0.85rem;
+        color: #3C4048;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    .heading{
+        margin-left: 0px;
+        text-align: center;
+    }
+    .head1{
+        font-size: 1rem;
+    }
+    .project1,.project2{
+        margin-left: 0px;
+        display: block;
+        text-align: center;
+    }
+    .img1{
+        width: 0px;
+        height: 0px;
+    }
+    .fh1{
+        font-size: 1rem;
+    }
+    .fh2{
+        font-size: 0.69rem;
+    }
+    .logo{
+        height: 15px;
+        width: 15px;
+    }
 }
