--- a/contact.css
+++ b/contact.css
@@ -88,3 +88,48 @@ hr{
 .hover{
     background-image: url("images/hover.jpeg");
 }
+
+@media all and (max-width:550px){
+    #name,#link{
+        display: inline-block;
+    }
+    .myName{
+        font-family: 'Kaushan Script', cursive;
+        font-size: 1.3rem;
+    }
+    #name{
+        width:65%;
+    }
+    .navLinks{
+        text-decoration: none;
+        font-size: 0.85rem;
+        color: #3C4048;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    .heading{
+        font-size: 2rem;
+        text-align: center;
+    }
+    .frame{
+        margin-left: 0px;
+        display: block;
+    }
+    .subH,.notToDisplay{
+        display: none;
+    }
+    .form{
+        column-gap:10%;
+        margin-right: 2%;
+        margin-left: 2%;
+    }
+    .fh1{
+        font-size: 1rem;
+    }
+    .fh2{
+        font-size: 0.69rem;
+    }
+    .logo{
+        height: 15px;
+        width: 15px;
+    }
+}
