--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ hr{
         font-size: 1.3rem;
     }
     #name{
-        width:30%;
+        width:38%;
     }
     .navLinks{
         text-decoration: none;
@@ -166,7 +166,8 @@ hr{
         width: 15px;
     }
     .red,.blue,.yellow{
-        width: 50px;
-        height: 50px;
+        width: 60px;
+        height: 60px;
+        font-size:0.69rem;
     }
 }
