--- a/contact.css
+++ b/contact.css
@@ -98,7 +98,7 @@ hr{
         font-size: 1.3rem;
     }
     #name{
-        width:65%;
+        width:38%;
     }
     .navLinks{
         text-decoration: none;
@@ -123,13 +123,25 @@ hr{
         margin-left: 2%;
     }
     .fh1{
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
     .fh2{
-        font-size: 0.69rem;
+        font-size: 0.5rem;
     }
     .logo{
-        height: 15px;
-        width: 15px;
+        height: 10px;
+        width: 10px;
+    }
+    .fname, .lname, #email, .subject{
+        width: 100px;
+        height: 20px;
+    }
+    .message{
+        width: 100px;
+        height:50px
+    }
+    .submit{
+        height: 60px;
+        width: 60px;
     }
 }
