--- a/project.css
+++ b/project.css
@@ -6,7 +6,10 @@
     font-family: 'Kaushan Script', cursive;
     font-size: 1.8rem;
 }
-
+.logo{
+    width: 30px;
+    height: 30px;
+}
 .navLinks{
     text-decoration: none;
     font-size: 1rem;
