--- a/contact.css
+++ b/contact.css
@@ -13,7 +13,10 @@
     color: #3C4048;
     font-family: Arial, Helvetica, sans-serif;
 }
- 
+.logo{
+    width: 30px;
+    height: 30px;
+}
 
 #name{
     width:80%;
