--- a/contact.css
+++ b/contact.css
@@ -13,7 +13,7 @@
     color: #3C4048;
     font-family: Arial, Helvetica, sans-serif;
 }
-.logo{
+.insta,.linkedIn,.twitter{
     width: 30px;
     height: 30px;
 }
